--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,6 +1,6 @@
 .header {
   position: fixed;
-  top: 0; left: 0; right: 0;
+  top: var(--announcement-offset, 0px); left: 0; right: 0;
   z-index: 100;
   height: var(--header-height);
   display: flex;
